force-app/main/default/objects/ucinn_portal_Registration_Template__c/ucinn_portal_Registration_Template__c.object-meta.xml
<CustomObject>
    <label>Registration Template</label>
    <nameField>
        <label>Registration Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>