force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Has_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Has_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>