force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Is_Display_Address_Fields__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_Address_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Display Address Fields</label>
    <type>Checkbox</type>
</CustomField>