force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Is_Display_Degree_and_Year_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_Degree_and_Year_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Display Degree and Year Field</label>
    <type>Checkbox</type>
</CustomField>