force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Is_Display_Registration_Helper_Text__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_Registration_Helper_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Display Registration Helper Text</label>
    <type>Checkbox</type>
</CustomField>