force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Is_Guest_Email_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Guest_Email_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest Email Required</label>
    <type>Checkbox</type>
</CustomField>