force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Registration_Helper_Text__c.field-meta.xml
<CustomField>
    <fullName>Registration_Helper_Text__c</fullName>
    <label>Registration Helper Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>