force-app/main/default/objects/ucinn_portal_Registration_Template__c/fields/Terms_and_Conditions_Text__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Text__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>