force-app/main/default/objects/ucinn_portal_Registration_Template__c/validationRules/Terms_and_Conditions.validationRule-meta.xml
<ValidationRule>
    <fullName>Terms_and_Conditions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Has_Terms_and_Conditions__c == true, LEN(Terms_and_Conditions_Text__c) == 0)</errorConditionFormula>
    <errorDisplayField>Terms_and_Conditions_Text__c</errorDisplayField>
    <errorMessage>Terms and Conditions Text must be filled out.</errorMessage>
</ValidationRule>